11/jackanalyzer/src/snapshots/jackanalyzer__test__..__Pong__Main.jack.snap
---
source: src/main.rs
expression: vm_code
---
function Main.main 1
call PongGame.newInstance 0
pop temp 0
call PongGame.getInstance 0
pop local 0
push local 0
call PongGame.run 1
pop temp 0
push local 0
call PongGame.dispose 1
pop temp 0
push constant 0
return
